dark mode fix reg box

--- a/css/register.css
+++ b/css/register.css
@@ -56,17 +56,18 @@
 .register-field input {
     width: 100%;
     padding: 10px;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--primary-color);
     color: var(--primary-color);
+    background-color: var(--secondary-color);
 }
 
 .register-field input:focus {
     outline: none;
-    border: 1px solid #a91b60;
+    border: 2px solid #a91b60;
 }
 
 .register-field input::placeholder {
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .register-field input:focus::placeholder {
